<resources>
    <string name="app_name">My Application</string>
    <string name="usernameHint">Username</string>
    <string name="passHint">Password</string>
    <string name="login_btn_txt">Login</string>
    <string name="register_btn_txt">Register</string>
    <string name="admin">Admin</string>
    <string name="wrongUP">Wrong Username OR Password</string>
    <string name="welcome">Welcome User</string>
    <string name="welcome_admin">Welcome Admin</string>
    <string name="alert_label">Add Alert</string>
    <string name="location">Location</string>
    <string name="alertType">Alert Type</string>
    <string name="dateTime">Date/Time</string>
    <string name="description">Description</string>
    <string name="newAlert">Set Alert</string>
    <string name="choose">choose</string>
    <string name="fire" translatable="false">Fire</string>
    <string name="rain" translatable="false">Rain</string>
    <string name="empty_alertType_title">No Alert selected</string>
    <string name="empty_alertType_mess">Select an Alert to continue</string>
    <string name="hot" translatable="false">Hot</string>
    <string name="s0">Statistics</string>
    <string name="s1">Total Fire Alerts</string>
    <string name="s2">Total Rain Alerts</string>
    <string name="s3">Total Hot Alerts</string>
    <string name="s4">Total Alerts</string>
    <string name="s5">Total Fire Alerts Today</string>
    <string name="s6">Total Rain Alerts Today</string>
    <string name="s7">Total Hot Alerts Today</string>
    <string name="s8">Total Alerts Today</string>
    <string name="s9">Total Fire Alerts Today Nearby</string>
    <string name="s10">Total Rain Alerts Today Nearby</string>
    <string name="s11">Total Hot Alerts Today Nearby</string>
    <string name="s12">Total Alerts Today Nearby</string>
    <string name="fire_alert_title">Fire</string>
    <string name="fire_alert_message">plz move</string>
    <string name="hot_alert_title">Hot weather</string>
    <string name="hot_alert_message">too hot stay home ,turn on fan</string>
    <string name="rain_alert_title">Rain is coming</string>
    <string name="rain_alert_message">too much rain, un umbrela will not save you .Stay home</string>
    <string name="new_alert_okey">Alert Registered successfully</string>
    <string name="accept">ACCEPT</string>
    <string name="decline">DECLINE</string>
    <string name="un_not_reg">Username not Regisered</string>
    <string name="username_ar_reg">Username is Taken</string>

</resources>